<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">智游大学城</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="retBtn">&lt;</string>
    <string name="phoneRegister">手机快速注册</string>
    <string name="regHint">请输入手机号</string>
    <string name="agreeReg">同意注册协议</string>
    <string name="regNext">下一步</string>
    <string name="_">智油大学城用户注册协议</string>
    <string name="agreeTxt">同意</string>
    <string name="haveSend">已经向XXX发送验证码</string>
    <string name="xsecondeResend">xx秒后重新发送</string>
    <string name="pleaseInputCode">请输入验证码</string>
    <string name="mine">我的</string>
    <string name="refacle">热点推荐</string>
    <string name="loginorreg">登录|注册</string>
    <string name="login_phone_hint">请输入手机号</string>
    <string name="login_userpass_">请输入密码</string>
    <string name="forget_">忘记密码？</string>
    <string name="reg_btn_hint">使用手机快速注册</string>
    <string name="login_login_btn">登录</string>
    <string name="logn_btn_hint">已有账号登录</string>
    <string name="reg_commit_btn_hint">确认注册</string>
    <string name="input_password_again">再输一遍密码</string>
    
    
        <string name="startlocation">开启定位</string>
    <string name="stoplocation">停止定位</string>
    <string name="error_code_desc">错误码说明</string>
    <string name="qa_title">常见问题</string>
    <string name="hight_accuracy_desc">高精度定位模式下，会同时使用GPS、Wifi和基站定位，返回的是当前条件下精度最好的定位结果</string>
    <string name="saving_battery_desc">低功耗定位模式下，仅使用网络定位即Wifi和基站定位，返回的是当前条件下精度最好的网络定位结果</string>
    <string name="device_sensor_desc">仅用设备定位模式下，只使用用户的GPS进行定位。这个模式下，由于GPS芯片锁定需要时间，首次定位速度会需要一定的时间</string>
    <string name="error_code_detail"> 61 ： GPS定位结果\n
		62 ： 扫描整合定位依据失败。此时定位结果无效。\n
		63 ： 网络异常，没有成功向服务器发起请求。此时定位结果无效。\n
		65 ： 定位缓存的结果。\n
		66 ： 离线定位结果。通过requestOfflineLocaiton调用时对应的返回结果\n
		67 ： 离线定位失败。通过requestOfflineLocaiton调用时对应的返回结果\n
		68 ： 网络连接失败时，查找本地离线定位时对应的返回结果\n
		161： 表示网络定位结果\n
		162~167： 服务端定位失败\n
		502：key参数错误\n
		505：key不存在或者非法\n
		601：key服务被开发者自己禁用\n
		602：key mcode不匹配\n
		501～700：key验证失败\n</string>
    <string name="qa_callback">问题反馈方法</string>
    <string name="qa_callback_mail">mapapi@baidu.com</string>

</resources>
