<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f0f0f0"
    android:orientation="vertical" >
    
    <include layout="@layout/common_title"/>

    <EditText
        android:id="@+id/userphone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="phone"
        android:layout_margin="20dp"
        android:hint="@string/login_phone_hint" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/userpassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:inputType="textPassword"
        android:layout_marginRight="20dp"
        android:text=""
        
        android:hint="@string/login_userpass_" />

    <LinearLayout
        android:layout_width="match_parent"
         android:layout_marginTop="20dp"
         
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/login_btn"
            android:layout_gravity="center"
           
            android:layout_marginLeft="20dp"
        	android:layout_marginRight="20dp"
            android:layout_width="wrap_content"
            android:layout_weight="3"
            android:layout_height="wrap_content"
            android:text="@string/login_login_btn" />

        <TextView
            android:id="@+id/forget"
            android:layout_weight="1"
            android:layout_gravity="center_vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forget_" />

    </LinearLayout>

    <TextView
        android:id="@+id/reg_Btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/reg_btn_hint" />

</LinearLayout>
