<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f0f0f0"
    android:orientation="vertical" >

    <include layout="@layout/common_title" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="15dp"
        android:orientation="vertical" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/haveSend"
            
            android:layout_marginLeft="30dp"
            android:text="@string/haveSend" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="20dp"
            android:orientation="horizontal" >

            <EditText
                android:id="@+id/code"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
              android:layout_marginLeft="30dp"
                android:hint="@string/pleaseInputCode"
                android:maxLength="11" />

            <Button
                android:id="@+id/reSend"
                
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:textColor="#f0f0f0"
              
                android:text="@string/xsecondeResend" />
        </LinearLayout>

        <Button
            android:id="@+id/regBtn"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:clickable="false"
            android:text="@string/regNext"
            android:textColor="#f0f0f0" />
    </LinearLayout>

</LinearLayout>