<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f0f0f0"
    android:orientation="vertical" >

    <include layout="@layout/common_title" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/phone"
            android:layout_width="300sp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:hint="@string/regHint"
            android:maxLength="11" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <CheckBox
                android:id="@+id/agreeRule"
                android:layout_width="34dp"
                android:layout_height="34dp"
                android:layout_marginLeft="20dp"
                android:text="@string/agreeTxt" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:text="@string/agreeTxt" />

            <TextView
                android:id="@+id/rule"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_"
                android:textColor="#ff00ff" />
        </LinearLayout>

        <Button
            android:id="@+id/regBtn"
            android:layout_width="300sp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:clickable="false"
            android:text="@string/regNext"
            android:textColor="#f0f0f0" />
    </LinearLayout>

</LinearLayout>